// ***********************
//  Euskalbar - CHANGELOG
// ***********************

3.9 bertsioa
================
- Firefox 4 bertsioan funtziona dezan egokitu da Euskalbar. (#103)
- Mokoroaren helbidea aldatu dute -> konpondu dira botoi bidezko bilaketa eta bilaketa konbinatua (#107)

3.8 bertsioa
================
- Elhuyarren Zientzia eta Teknologiaren Hiztegi Entziklopedikoa gehitu da. (#102)
- Energia eta Telekomunikazioen hiztegiak gehitu dira.
- Lexikoaren Behatokia eta Consumer Corpusak gehitu dira.
- Hizkuntzei lotutako botoiak ezkutatu/erakutsi egin daitezke.
- Azal berria gehitu da bilaketa konbinatuak egiteko: grisleun (thanks Gotzon Egia).

3.7 bertsioa
================
- Hiztegi Batua bilaketa konbinatuetan erabiltzean zegoen bug-a konpondu da. (#93)
- Zehazki hiztegia integratu da. (#95)
- Testu-kutxaren tamaina alda daiteke. (#62)
- Akats konponketak.

3.6 bertsioa
================
- Orotariko Euskal Hiztegia integratu da. (#90)

3.5 bertsioa
================
- ItzuL posta-zerrendako mezuak Google bilatzailearen bidez kontsultatzen dira. (#85)
- Bergarako hiztegia webgune berrian kontsultatzen da. (#85)
- Denbora-mugararen hobespenerako zenbaki motako testu-kutxa erabiltzen da. (#63)
- Labayru Hiztegia gehitu da. (#83)
- Euskalbarren kode guztia JavaScript objektuetan bildu da, neurri batean
izen-eremuekin egon daitezkeen arazoak ekiditeko.
- Aldaketak hiztegien menuan:
  + Bizkaiko Foru Aldundiaren hiztegi terminologikoaren URLa konpondu da.
  + Osasun hiztegiaren URLa konpondu da.

3.4 bertsioa
================
- Goihata euskara-japoniera hiztegia gehitu da. (#82)
- Ereduzko Prosa Gaur bere webgune berrian kontsultatzen da. (#81)
- Japonierako lokalizazioa gehitu da.

3.3 bertsioa
================
- Open-tran bilaketa konbinatuetan integratu da. (#67)
- Hiztegi Batua zuzendu da Euskaltzaindiaren webgune berriaren kontsultak erakutsi ahal izateko. (#78) 

3.2 bertsioa
================
- Elhuyar Hiztegia helbide berrian kontsultatzen da.