@@ -13,7 +13,7 @@
       <Description>
         <em:id>{ec8030f7-c20a-464f-9b0e-13a3a9e97384}</em:id>
       	<em:minVersion>4.0b8</em:minVersion>
-      	<em:maxVersion>4.0</em:maxVersion>
+      	<em:maxVersion>4.0.*</em:maxVersion>
       </Description>
     </em:targetApplication>
 
@@ -24,6 +24,8 @@
     <em:iconURL>chrome://euskalbar/skin/euskalbar32.png</em:iconURL>
     <em:aboutURL>chrome://euskalbar/content/about/about.xul</em:aboutURL>
     <em:optionsURL>chrome://euskalbar/content/prefs.xul</em:optionsURL>
+    <!-- Hedapena despaketatuta instalatzen du -->
+    <em:unpack>true</em:unpack>
 
   </Description>
 
