@@ -6,6 +6,7 @@
 ================
 - Firefox 4 bertsioan funtziona dezan egokitu da Euskalbar. (#103)
 - Mokoroaren helbidea aldatu dute -> konpondu dira botoi bidezko bilaketa eta bilaketa konbinatua (#107)
+- Hasierako leihoa erakusten duen kodea aldatu da (#108)
 
 3.8 bertsioa
 ================
